# FFFF-Ferrex-7C08-456F-AB86-7A1015EC599F

./: .BridgeLabelsAndRatings  .gitignore  AGENTS-2.md  AGENTS-3.md  AGENTS.md  Cargo.toml  Memories.md  Software name.md  SvgIcons.h  UI界面风格.md  评估与审核.md
ArcMeta/src/crypto/: EncryptionManager.cpp
ArcMeta/src/db/: Database.cpp  ItemRepo.cpp  ItemRepo.h
ArcMeta/src/mft/: UsnWatcher.cpp
ArcMeta/src/ui/: BatchRenamePreviewDialog.h  ContentPanel.cpp  MainWindow.cpp  MainWindow.h  RuleRow.h
Template/: CMakeLists.txt  main.cpp
ferrex/.cargo/: config.toml
ferrex/crates/indexer/: Cargo.toml
ferrex/crates/indexer/src/: lib.rs
ferrex/crates/search/: Cargo.toml
ferrex/crates/search/src/: lib.rs
ferrex/crates/storage/: Cargo.toml
ferrex/crates/storage/src/: lib.rs
ferrex/ferrex_cli/src/: main.rs
ferrex/ferrex_gui/: Cargo.toml  build.rs
ferrex/ferrex_gui/src/: main.rs
ferrex_Codebase/.cargo/: config.toml
ferrex_Codebase/crates/indexer/src/: lib.rs
ferrex_Codebase/crates/search/src/: lib.rs
ferrex_Codebase/ferrex_cli/src/: main.rs
ferrex_Codebase/ferrex_gui/src/: main.rs
ferrex_source/: Cargo.toml  FERREX.txt
ferrex_source/.cargo/: config.toml
ferrex_source/crates/indexer/: Cargo.toml
ferrex_source/crates/indexer/src/: lib.rs
ferrex_source/crates/search/: Cargo.toml
ferrex_source/crates/search/src/: lib.rs
ferrex_source/crates/storage/: Cargo.toml
ferrex_source/crates/storage/src/: lib.rs
ferrex_source/ferrex_cli/src/: main.rs
ferrex_source/ferrex_gui/: Cargo.toml  build.rs
ferrex_source/ferrex_gui/src/: main.rs
quickwindow/: CMakeLists.txt
quickwindow/src/: main.cpp
quickwindow/src/core/: AES.cpp  AES.h  ActionRecorder.cpp  ActionRecorder.h  ClipboardMonitor.cpp  ClipboardMonitor.h  DatabaseManager.cpp  DatabaseManager.h  FileCryptoHelper.cpp  FileCryptoHelper.h  FileStorageHelper.cpp  FileStorageHelper.h  HardwareInfoHelper.cpp  HardwareInfoHelper.h  HotkeyManager.cpp  HotkeyManager.h  HttpServer.cpp  HttpServer.h  KeyboardHook.cpp  KeyboardHook.h  Logger.cpp  Logger.h  MessageCaptureHandler.cpp  MessageCaptureHandler.h  OCRManager.cpp  OCRManager.h  ReminderService.cpp  ReminderService.h  ShortcutManager.cpp  ShortcutManager.h
quickwindow/src/models/: CategoryModel.cpp  CategoryModel.h  NoteModel.cpp  NoteModel.h
quickwindow/src/ui/: ActivationDialog.cpp  ActivationDialog.h  AdvancedTagSelector.cpp  AdvancedTagSelector.h  CategoryDelegate.h  CategoryLockWidget.cpp  CategoryLockWidget.h  CategoryPasswordDialog.cpp  CategoryPasswordDialog.h  CleanListView.cpp  CleanListView.h  ClickableLineEdit.h  ColorPickerWindow.cpp  ColorPickerWindow.h  DropTreeView.cpp  DropTreeView.h  Editor.cpp  Editor.h  FileSearchHistoryPopup.h  FileSearchWidget.cpp  FileSearchWidget.h  FileSearchWindow.cpp  FileSearchWindow.h  FileStorageWindow.cpp  FileStorageWindow.h  FilterPanel.cpp  FilterPanel.h  FireworksOverlay.cpp  FireworksOverlay.h  FloatingBall.cpp  FloatingBall.h  FlowLayout.cpp  FlowLayout.h  FramelessDialog.cpp  FramelessDialog.h  HelpWindow.cpp  HelpWindow.h  IconHelper.h  IntegratedSearchWindow.cpp  IntegratedSearchWindow.h  (+53 more)
quickwindow/src/watchdog/: main.cpp
参考版/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
参考版/src/: main.cpp
参考版/src/core/: CoreController.cpp  CoreController.h
参考版/src/crypto/: EncryptionManager.h
参考版/src/db/: CategoryRepo.cpp  CategoryRepo.h  Database.h  FavoritesRepo.cpp  FavoritesRepo.h  FolderRepo.cpp  FolderRepo.h  ItemRepo.cpp  SyncEngine.cpp  SyncEngine.h
参考版/src/meta/: AmMetaJson.cpp  AmMetaJson.h  BatchRenameEngine.cpp  BatchRenameEngine.h  MetadataDefs.h  MetadataManager.cpp  MetadataManager.h
参考版/src/mft/: MftReader.cpp  MftReader.h  UsnWatcher.h
参考版/src/ui/: BatchRenameDialog.cpp  BatchRenameDialog.h  BatchRenamePreviewDialog.cpp  BreadcrumbBar.cpp  BreadcrumbBar.h  CategoryDelegate.h  CategoryLockDialog.cpp  CategoryLockDialog.h  CategoryModel.cpp  CategoryModel.h  CategoryPanel.cpp  CategoryPanel.h  CategorySetPasswordDialog.cpp  CategorySetPasswordDialog.h  ContentPanel.h  DropListView.cpp  DropListView.h  DropTreeView.cpp  DropTreeView.h  FilterPanel.cpp  FilterPanel.h  FramelessDialog.cpp  FramelessDialog.h  LoadingWindow.cpp  LoadingWindow.h  Logger.h  MainWindow.cpp  MetaPanel.cpp  MetaPanel.h  NavPanel.cpp  NavPanel.h  ProgressDialog.h  QuickLookWindow.cpp  QuickLookWindow.h  RuleRow.cpp  ScanDialog.cpp  ScanDialog.h  SearchHistoryPanel.cpp  SearchHistoryPanel.h  ToolTipOverlay.cpp  (+3 more)
旧版本/: README.md
旧版本/ferrex_source/: FERREX.txt
旧版本/ferrex_source/crates/search/: Cargo.toml
旧版本/ferrex_source/crates/search/src/: lib.rs
旧版本/ferrex_source/ferrex_cli/: Cargo.toml
旧版本/ferrex_source/ferrex_gui/src/: main.rs
