[package]
name = "ferrex_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
indexer = { path = "../crates/indexer" }
storage = { path = "../crates/storage" }
search = { path = "../crates/search" }
eframe = { version = "0.28", features = ["glow"] }
tokio = { version = "1.0", features = ["full"] }
sysinfo = "0.30"
