[package]
name = "ferrex_gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
indexer = { path = "../crates/indexer" }
storage = { path = "../crates/storage" }
search = { path = "../crates/search" }
eframe = { version = "0.28", features = ["glow"] }
egui_extras = { version = "0.28", features = ["svg", "image"] }
sysinfo = "0.30"
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
