[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
] }
log = "0.4"
